--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.35-Alpha,</span>
-<span id="revdate">2018-11-11</span>
+<span id="revnumber">versione 0.7.36-Alpha,</span>
+<span id="revdate">2018-11-12</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -710,6 +710,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_lega">lega</a></li>
 <li><a href="#_lega_a">lega_a</a></li>
 <li><a href="#_libera">libera</a></li>
+<li><a href="#_mostra">mostra</a></li>
 <li><a href="#_prega">prega</a></li>
 <li><a href="#_rifai">rifai</a></li>
 <li><a href="#_scava">scava</a></li>
@@ -1637,6 +1638,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">mordi (ogg)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>mostra</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">mostra (ogg) a (png)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
@@ -3637,6 +3647,9 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 <p><code>libera</code></p>
 </li>
 <li>
+<p><code>mostra</code></p>
+</li>
+<li>
 <p><code>prega</code></p>
 </li>
 <li>
@@ -3729,6 +3742,10 @@ gruppo di appartenenza, o quei verbi che sono destinati a restare isolati:</p>
 </div>
 <div class="sect3">
 <h4 id="_libera"><a class="anchor" href="#_libera"></a>libera</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_mostra"><a class="anchor" href="#_mostra"></a>mostra</h4>
 
 </div>
 <div class="sect3">
@@ -3873,13 +3890,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">shake (obj)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>show</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">reveal</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">show (obj) to (act)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
@@ -4311,6 +4321,9 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>libera</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>mostra</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>prega</code>.</p>
 </li>
 <li>
@@ -4339,7 +4352,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.35-Alpha<br>
+Versione 0.7.36-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
