Verb Search + Fix 'Ascolta'
Verb restriction `search` to `ispezionare`.

Verb `search` to `ispeziona`.

Fix `ascolta`: In `DOES` change `IF ogg AT hero` into `IF hero AT ogg`
in order for the verb to work when hero is in a nested location (eg. in
a hole) and to work with room/site objects (which are not AT hero's
location because they're in a wrapping location, but the hero is AT their
location).

--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.22-Alpha,</span>
-<span id="revdate">2018-11-11</span>
+<span id="revnumber">versione 0.7.23-Alpha,</span>
+<span id="revdate">2018-11-12</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -559,6 +559,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN guidare.                  ---&gt; drive
   CAN indossare.                ---&gt; wear
   CAN inventariare.             ---&gt; i            (+ inv, inventory)
+  CAN ispezionare.              ---&gt; search
   CAN lanciare.                 ---&gt; throw
   CAN lanciare_a.               ---&gt; throw_to
   CAN lanciare_contro.          ---&gt; throw_at
@@ -753,7 +754,6 @@ italiano del modulo delle definizioni.</p>
   CAN pry_with.
 --CAN put_down. ------------------&gt; ** WASN'T USED! (SEE 'drop'!) **
   CAN rub.
-  CAN search.
   CAN shake.
 --CAN shoot. ---------------------&gt; ** VERBO ELIMINATO **
 --CAN shoot_with. ----------------&gt; ** VERBO ELIMINATO **
@@ -777,7 +777,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.22-Alpha<br>
+Versione 0.7.23-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
