--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.36-Alpha,</span>
+<span id="revnumber">versione 0.7.37-Alpha,</span>
 <span id="revdate">2018-11-12</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -560,6 +560,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_guarda_in">guarda_in</a></li>
 <li><a href="#_guarda_sotto">guarda_sotto</a></li>
 <li><a href="#_guarda_su">guarda_su</a></li>
+<li><a href="#_ispeziona">ispeziona</a></li>
 </ul>
 </li>
 <li><a href="#_commerciare">Commerciare</a>
@@ -1477,6 +1478,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>ispeziona</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">perquisisci</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">ispeziona (ogg)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -2894,6 +2904,9 @@ liquido ma non il verbo <code>svuota</code>.</p>
 <li>
 <p><code>guarda_su</code></p>
 </li>
+<li>
+<p><code>ispeziona</code></p>
+</li>
 </ul>
 </div>
 <div class="paragraph">
@@ -2957,6 +2970,10 @@ l&#8217;attributo <code>xDesc</code> (che di default è una stringa vuota).</p>
 </div>
 <div class="sect3">
 <h4 id="_guarda_su"><a class="anchor" href="#_guarda_su"></a>guarda_su</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_ispeziona"><a class="anchor" href="#_ispeziona"></a>ispeziona</h4>
 
 </div>
 </div>
@@ -3879,13 +3896,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>search</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">search (obj)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>shake</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">shake (obj)</p></td>
@@ -4085,6 +4095,9 @@ italiano del modulo dei verbi.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>guarda_su</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>ispeziona</code>.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>compra</code>.</p>
@@ -4352,7 +4365,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.36-Alpha<br>
+Versione 0.7.37-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
