Meta Verbs: 'About' + 'Hint'
Verb restrictions:
- `about` to `mostrare_istruzioni`
- `hint`  to `mostrare_suggerimenti`

Meta verbs:
- `'about'` to `istruzioni` (+ help, info)
- `hint`    to `suggerimento` (+ hint, aiutino)

--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revdate">2018-11-11</span>
+<span id="revdate">2018-11-12</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -647,6 +647,12 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>10500</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_info</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Istruzioni, Info e Aiuto</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>19999</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_misc_meta</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">=== Meta Verbi Vari</p></td>
