--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.37-Alpha,</span>
+<span id="revnumber">versione 0.7.38-Alpha,</span>
 <span id="revdate">2018-11-12</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -481,11 +481,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_modalità_lunga">modalità_lunga</a></li>
 </ul>
 </li>
+<li><a href="#_istruzioni_info_e_aiuto">Istruzioni, Info e Aiuto</a>
+<ul class="sectlevel3">
+<li><a href="#_istruzioni">istruzioni</a></li>
+<li><a href="#_ringraziamenti">ringraziamenti</a></li>
+<li><a href="#_suggerimento">suggerimento</a></li>
+</ul>
+</li>
 <li><a href="#_meta_verbi_vari">Meta Verbi Vari</a>
 <ul class="sectlevel3">
 <li><a href="#_abbandona_partita">abbandona_partita</a></li>
 <li><a href="#_ricomincia_partita">ricomincia_partita</a></li>
-<li><a href="#_ringraziamenti">ringraziamenti</a></li>
 </ul>
 </li>
 </ul>
@@ -860,6 +866,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>istruzioni</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">help, info</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">istruzioni</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>modalità_breve</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">brief, modalità corta</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">modalità breve</p></td>
@@ -926,6 +941,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>salva_partita</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">save</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">salva [partita]</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>suggerimento</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">hint, aiutino</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">suggerimento</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
@@ -2448,10 +2472,59 @@ modalità: breve e lunga.</p>
 </div>
 </div>
 <div class="sect2">
+<h3 id="_istruzioni_info_e_aiuto"><a class="anchor" href="#_istruzioni_info_e_aiuto"></a>Istruzioni, Info e Aiuto</h3>
+<div class="paragraph">
+<p>Questo gruppo include i meta verbi per accedere a informazioni sul gioco,
+aiuti, ecc.:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>istruzioni</code></p>
+</li>
+<li>
+<p><code>ringraziamenti</code></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Verbi di questo gruppo non ancora tradotti:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>hint</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_istruzioni"><a class="anchor" href="#_istruzioni"></a>istruzioni</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_ringraziamenti"><a class="anchor" href="#_ringraziamenti"></a>ringraziamenti</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_suggerimento"><a class="anchor" href="#_suggerimento"></a>suggerimento</h4>
+
+</div>
+</div>
+<div class="sect2">
 <h3 id="_meta_verbi_vari"><a class="anchor" href="#_meta_verbi_vari"></a>Meta Verbi Vari</h3>
 <div class="paragraph">
 <p>Qui di seguito sono elencati i vari meta verbi che non rientrano in alcun
 gruppo specifico.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>abbandona_partita</code></p>
+</li>
+<li>
+<p><code>ricomincia_partita</code></p>
+</li>
+</ul>
 </div>
 <div class="sect3">
 <h4 id="_abbandona_partita"><a class="anchor" href="#_abbandona_partita"></a>abbandona_partita</h4>
@@ -2459,10 +2532,6 @@ gruppo specifico.</p>
 </div>
 <div class="sect3">
 <h4 id="_ricomincia_partita"><a class="anchor" href="#_ricomincia_partita"></a>ricomincia_partita</h4>
-
-</div>
-<div class="sect3">
-<h4 id="_ringraziamenti"><a class="anchor" href="#_ringraziamenti"></a>ringraziamenti</h4>
 
 </div>
 </div>
@@ -3840,13 +3909,6 @@ italiano del modulo dei verbi.</p>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>about</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">help, info</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">about</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>clean</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">polish, wipe</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">clean (obj)</p></td>
@@ -3865,13 +3927,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">climb on (surface)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>hint</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hints</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">hint</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">0</p></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -3962,13 +4017,19 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>modalità_lunga</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>istruzioni</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>ringraziamenti</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>suggerimento</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>abbandona_partita</code>.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>ricomincia_partita</code>.</p>
-</li>
-<li>
-<p><i class="fa fa-square-o"></i> Descrizione <code>ringraziamenti</code>.</p>
 </li>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>accendi</code>.</p>
@@ -4365,7 +4426,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.37-Alpha<br>
+Versione 0.7.38-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
