--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.38-Alpha,</span>
+<span id="revnumber">versione 0.7.39-Alpha,</span>
 <span id="revdate">2018-11-12</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -615,9 +615,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_salta_su">salta_su</a></li>
 </ul>
 </li>
-<li><a href="#_sedersi_sdraiarsi_alzarsi">Sedersi, Sdraiarsi, Alzarsi</a>
+<li><a href="#_posizionarsi_su_superfici">Posizionarsi su Superfici</a>
 <ul class="sectlevel3">
 <li><a href="#_alzati">alzati</a></li>
+<li><a href="#_arrampicati">arrampicati</a></li>
+<li><a href="#_sali_su">sali_su</a></li>
 <li><a href="#_scendi_da">scendi_da</a></li>
 <li><a href="#_sdraiati">sdraiati</a></li>
 <li><a href="#_sdraiati_in">sdraiati_in</a></li>
@@ -1079,6 +1081,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">2</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>arrampicati</code></p></td>
+<td class="tableblock halign-left valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">arrampicati su (superficie)</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"></td>
 </tr>
 <tr>
@@ -1832,6 +1843,15 @@ elencati in ordine alfabetico.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>rispondi</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">rispondi (argomento)!</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
+<td class="tableblock halign-center valign-top"></td>
+<td class="tableblock halign-center valign-top"></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>sali_su</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">mettiti</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">sali su (superficie)</p></td>
 <td class="tableblock halign-center valign-top"></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"></td>
@@ -3274,7 +3294,7 @@ e riparare cose:</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_sedersi_sdraiarsi_alzarsi"><a class="anchor" href="#_sedersi_sdraiarsi_alzarsi"></a>Sedersi, Sdraiarsi, Alzarsi</h3>
+<h3 id="_posizionarsi_su_superfici"><a class="anchor" href="#_posizionarsi_su_superfici"></a>Posizionarsi su Superfici</h3>
 <div class="paragraph">
 <p>Questo gruppo include i verbi per sedersi, sdraiarsi ed alazarsi:</p>
 </div>
@@ -3282,6 +3302,12 @@ e riparare cose:</p>
 <ul>
 <li>
 <p><code>alzati</code></p>
+</li>
+<li>
+<p><code>arrampicati</code></p>
+</li>
+<li>
+<p><code>sali_su</code></p>
 </li>
 <li>
 <p><code>scendi_da</code></p>
@@ -3303,18 +3329,16 @@ e riparare cose:</p>
 </li>
 </ul>
 </div>
-<div class="paragraph">
-<p>Verbi di questo gruppo non ancora tradotti:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p><code>stand_on</code></p>
-</li>
-</ul>
-</div>
 <div class="sect3">
 <h4 id="_alzati"><a class="anchor" href="#_alzati"></a>alzati</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_arrampicati"><a class="anchor" href="#_arrampicati"></a>arrampicati</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_sali_su"><a class="anchor" href="#_sali_su"></a>sali_su</h4>
 
 </div>
 <div class="sect3">
@@ -3923,13 +3947,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>climb_on</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">climb on (surface)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"></td>
-</tr>
-<tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>pry</code></p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">pry (obj)</p></td>
@@ -3963,13 +3980,6 @@ italiano del modulo dei verbi.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">squeeze (obj)</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
 <td class="tableblock halign-center valign-top"><p class="tableblock">&#x2714;</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>stand_on</code></p></td>
-<td class="tableblock halign-left valign-top"></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">stand on (surface)</p></td>
-<td class="tableblock halign-center valign-top"><p class="tableblock">1</p></td>
-<td class="tableblock halign-center valign-top"></td>
 </tr>
 </tbody>
 </table>
@@ -4230,6 +4240,12 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>alzati</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>arrampicati</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>sali_su</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>scendi_da</code>.</p>
 </li>
 <li>
@@ -4426,7 +4442,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.38-Alpha<br>
+Versione 0.7.39-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
