--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -745,7 +745,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>21400</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_sedersi</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">== Sedersi, Sdraiarsi, Alzarsi</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Posizionarsi su Superfici</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>21500</code></p></td>
